tweak build script

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,4 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
-pluginGroup=com.discordsrv.sponge
-pluginId=discordsrv-sponge
-pluginVersion=1.0-SNAPSHOT
+rootProject.name = 'DiscordSRV-Sponge'
